[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autologger"
version = "0.1.0"
description = "Automatically log all print() output to a file"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Akshat Singh", email = "codeakshatsingh@gmail.com"}
]

[project.urls]
Homepage = "https://github.com/AkshatSingh2005/autologger"
